1.0:
  Navigate to websites
  Basic bookmark-support

1.1:
  Strip strings before displaying it (bookmarks)

1.1.2
  Bug: str.replace only returns value, so nothing is changed

development version:

1.2
  Now other protocols than http and https work. (file:// for example)
  Migrated to jQuery