@@ -4,11 +4,15 @@ Navigate to websites in the sidebar.
 
 Detailed description:
 
-With this extension, you can surf to any website in the sidebar. You can also bookmark pages that you visit often. As the bookmarks relies on Opera's built in bookmark manager, they will automatically sync between your devices.
+With this extension, you can surf to any* website in the sidebar. You can also bookmark pages that you visit often. As the bookmarks relies on Opera's built in bookmark manager, they will automatically sync between your devices.
 
 Features:
  - Surf to any site in the sidebar
  - Bookmark sites that you visit often
  - Delete bookmarks by right-clicking on them
+ - You can auto-reload a page by right-clicking the reload button.
+ - If you right click the expand button (with three dots), you can enable mobile mode, which will make some websites use their mobile version, which often fits better in the Web Panel.
 
 If you want more advanced bookmark management features, go to Opera's built-in bookmark manager, click on "Other bookmarks" (Also called "Imported bookmarks"), and enter the folder "Web Panel extension".
+
+*Note! Some sites will not work in the sidebar. If you want to know why, you can have a more detailed explanation here: <insert link>
