@@ -1,6 +1,3 @@
-* Back and forward buttons
-* warn that this extension may NOT load some sites, such as vk.com in description
-* change user agent
+* warn that this extension may NOT load some sites, such as vk.com, in description
 * zoom
-* Auto-reload options by righ-clicking on reload-button
 * folder support?
