@@ -10,11 +10,10 @@ if (window !== window.top && window.parent == window.top)
   // Then send the current site:
   chrome.runtime.sendMessage({fromCnt: 'newLink', link: document.URL});
 
-  window.addEventListener("click", myFunction);
-
-  function myFunction()
-  {
+  // On many modern ajax sites, like youtube, when a user navigates, what actually happens is that ajax content loads and the
+  // url is chanded manually. Then we must send the new url. We can't listen for url changes, so we listen for clicks:
+  window.addEventListener("click", function() {
     chrome.runtime.sendMessage({fromCnt: 'newLink', link: document.URL});
-  }
+  });
 
 }
