@@ -36,7 +36,10 @@
 </div>
 <div id="bookmarks-popup"></div>
 <iframe id="iframe" src=""></iframe>
-<div id="loading"></div>
+<div id="loading">
+  <p id="searchInstead">Search instead</p>
+  <h3 id="loadingSlow">It takes long time to load this page. Check that the url is correct, and your internet connection.</h3>
+</div>
 
 <script src="jquery-2.1.4.min.js"></script>
 <script src="panel.js"></script>
