@@ -94,6 +94,8 @@ html, body {
 
 #center {
 	overflow: hidden;
+	border-left: 1px solid #A6A6A6;
+	height: 100%;
 }
 
 #url {
@@ -105,7 +107,6 @@ html, body {
   padding-left: 5px;
   padding-right: 5px;
   font-size: 15px;
-  border-left: 1px solid #A6A6A6;
   background-color: #F2F2F2;
 }
 
@@ -214,4 +215,19 @@ html, body {
 	background-image: url("icons/load.gif");
   background-repeat: no-repeat;
   background-position: center;
+}
+
+#searchInstead {
+	padding: 20px;
+	padding-bottom: 0px;
+	font-size: 12px;
+	color: blue;
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+#loadingSlow {
+	display: none;
+	padding: 20px;
+	padding-top: 0px;
 }
